[package]
name = "match_all"
version = "0.2.5"
authors = ["Sebastian Malton <sebastian@malton.name>", "Josh Leverette <coder543@gmail.com>"]
description = "This crate provides a match_all! macro for matching multiple patterns"
license = "MIT"
repository = "https://github.com/nokel81/match_all"
readme = "./README.md"

[dependencies]
